[gd_scene load_steps=5 format=3 uid="uid://j2ldeaa36stm"]

[ext_resource type="Script" uid="uid://6vgj6kqbhvwh" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://cllussbvussx1" path="res://assets/sprites/enemies/silvera (Test)/dg6hhbg-afc993d2-733b-4418-99d9-32679df1a72f.png" id="2_md0e3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(47, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ra3w"]
size = Vector2(49, 129)

[node name="CharacterBody2D" type="CharacterBody2D"]
platform_wall_layers = 1
script = ExtResource("1_md0e3")

[node name="collisione" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 38.5)
shape = SubResource("RectangleShape2D_md0e3")

[node name="area combatt_" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="area combatt_"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_4ra3w")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 7
radius = 64.0
avoidance_layers = 7
avoidance_mask = 7

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.18, 0.18)
texture = ExtResource("2_md0e3")

[node name="Timer" type="Timer" parent="."]

[node name="vision" type="Node2D" parent="."]

[node name="ray1" type="RayCast2D" parent="vision"]
target_position = Vector2(181, 181)
collision_mask = 3

[node name="ray2" type="RayCast2D" parent="vision"]
target_position = Vector2(128, 221)
collision_mask = 3

[node name="ray3" type="RayCast2D" parent="vision"]
target_position = Vector2(66, 247)
collision_mask = 3

[node name="ray4" type="RayCast2D" parent="vision"]
target_position = Vector2(0, 256)
collision_mask = 3

[node name="ray5" type="RayCast2D" parent="vision"]
target_position = Vector2(-66, 247)
collision_mask = 3

[node name="ray6" type="RayCast2D" parent="vision"]
target_position = Vector2(-128, 221)
collision_mask = 3

[node name="ray7" type="RayCast2D" parent="vision"]
target_position = Vector2(-181, 181)
collision_mask = 3
